--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <p class="subtitle">
         My first website with <strong>Bulma</strong>!
       </p>
+	 <img src="./917_big2.jpg">
     </div>
   </section>
   </body>
